--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -26,7 +26,7 @@
         <div class="page-login-form box">
           <h3>Login to Your Account</h3>
           
-          <form method="post" class="login-form">
+          <form method="post" action="{% url 'accounts:login' %}" class="login-form">
             {% csrf_token %}
             
             {% if form.non_field_errors %}
