Add employer growth prediction + classification job_degree_mention

--- a/predictions/templates/predictions/employersPredictions.html
+++ b/predictions/templates/predictions/employersPredictions.html
@@ -43,7 +43,7 @@
           </div>
           <h4>Company Growth Forecast</h4>
           <p>Predict your company's growth trajectory based on hiring patterns and market data.</p>
-          <button class="btn btn-common" data-toggle="modal" data-target="#companyGrowthModal">Forecast Growth</button>
+          <a href="{% url 'predictions:employer_growth' %}" class="btn btn-common">Forecast Growth</a>
         </div>
       </div>
       
